--- a/teg.html
+++ b/teg.html
@@ -43,9 +43,14 @@
             <h3>Énergie : <div id="energy-progress" class="progress-bar"><div class="progress"></div></div></h3>
             <h3>Culture : <div id="culture-progress" class="progress-bar"><div class="progress"></div></div></h3>
         </div>
+			<div id="attack-message" style="color: red; border: 1px solid red; padding: 5px; display: none;"></div>
+    <div id="dice-results"></div>
         <button id="play-turn" onclick="playTurn()">Jouer le Tour</button>
     </div>
-    <div id="dice-results"></div>
+
+	
+
+	
     <div id="start-game" style="display: none;">
         <button onclick="startGame()">Démarrer le Jeu</button>
     </div>
