--- a/teg.html
+++ b/teg.html
@@ -5,12 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiny Epic Galaxy - Automate</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #001f3f;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            color: #ffffff;
+            margin-top: 20px;
+        }
+
+        #game-board {
+            width: 90%;
+            max-width: 1200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cards-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            width: 100%;
+        }
+
         .card {
-            border: 1px solid #ccc;
+            background-color: #011627;
+            border: 1px solid #4caf50;
             padding: 10px;
             margin: 5px;
-            display: inline-block;
+            flex: 1;
+            min-width: 200px;
+            max-width: 23%;
+            box-sizing: border-box;
         }
+
         .progress-bar {
             background-color: #f3f3f3;
             border: 1px solid #ccc;
@@ -19,49 +55,103 @@
             margin-top: 5px;
             position: relative;
         }
+
         .progress {
             background-color: #4caf50;
             height: 100%;
             text-align: center;
             color: white;
         }
+
+        #next-card-selection {
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        #resources, #dice-actions {
+            flex: 1;
+            padding: 10px;
+            margin: 10px;
+            background-color: #012a4a;
+            border-radius: 8px;
+        }
+
+        #dice-actions {
+            order: 1;
+        }
+
+        #resources {
+            order: 2;
+        }
+
+        .container {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        button {
+            background-color: #4caf50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px 2px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        button:disabled {
+            background-color: #gray;
+            cursor: not-allowed;
+        }
+
+        #attack-message {
+            color: red;
+            border: 1px solid red;
+            padding: 5px;
+            display: none;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Tiny Epic Galaxy - Automate</h1>
     <div id="game-board">
-        <div id="cards-in-play"></div>
+        <div class="cards-container" id="cards-in-play"></div>
         <div id="next-card-selection" style="display: none;">
             <h3>Sélectionner une carte de remplacement :</h3>
             <div id="next-cards"></div>
             <input type="text" id="search-bar" placeholder="Rechercher une carte..." oninput="filterCards()">
         </div>
-        <div>
-            <h3>Vaisseaux IA sur le plateau : <span id="ia-ships-on-board"></span></h3>
-            <h3>Points de Victoire : <span id="victory-points"></span></h3>
-            <h3>Niveau de Colonisation : <span id="colonization-level"></span></h3>
-            <h3>Énergie : <div id="energy-progress" class="progress-bar"><div class="progress"></div></div></h3>
-            <h3>Culture : <div id="culture-progress" class="progress-bar"><div class="progress"></div></div></h3>
+        <div class="container">
+            <div id="dice-actions">
+                <h3>Actions des dés</h3>
+                <div id="dice-results"></div>
+                <div id="attack-message"></div>
+                <button id="play-turn" onclick="playTurn()">Jouer le Tour</button>
+            </div>
+            <div id="resources">
+                <h3>Vaisseaux IA sur le plateau : <span id="ia-ships-on-board"></span></h3>
+                <h3>Points de Victoire : <span id="victory-points"></span></h3>
+                <h3>Niveau de Colonisation : <span id="colonization-level"></span></h3>
+                <h3>Énergie : <div id="energy-progress" class="progress-bar"><div class="progress"></div></div></h3>
+                <h3>Culture : <div id="culture-progress" class="progress-bar"><div class="progress"></div></div></h3>
+            </div>
         </div>
-			<div id="attack-message" style="color: red; border: 1px solid red; padding: 5px; display: none;"></div>
-    <div id="dice-results"></div>
-        <button id="play-turn" onclick="playTurn()">Jouer le Tour</button>
-    </div>
 
-	
-
-	
-    <div id="start-game" style="display: none;">
-        <button onclick="startGame()">Démarrer le Jeu</button>
     </div>
     <script src="main.js"></script>
-	<script src="event.js"></script>
-	<script src="utils.js"></script>
-	<script src="dice.js"></script>
-	<script src="cards.js"></script>
-	<script src="ia.js"></script>
-	<script src="begin.js"></script>
-	<script src="updates.js"></script>
-	
+    <script src="event.js"></script>
+    <script src="utils.js"></script>
+    <script src="dice.js"></script>
+    <script src="cards.js"></script>
+    <script src="ia.js"></script>
+    <script src="begin.js"></script>
+    <script src="updates.js"></script>
 </body>
 </html>
